--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -2,14 +2,15 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 
     <types>
-        <members>*</members> 
+    <members>*</members> 
+        <members>Address</members> 
         <members>User</members> 
          <members>Account</members> 
          <members>Contact</members> 
         <name>CustomObject</name>
     </types>
  
-   <types>
+  <types>
         <members>*</members> 
         <name>GlobalPicklist</name>
     </types>
@@ -112,6 +113,6 @@
      <types>
         <members>*</members>
         <name>Group</name>
-    </types>
+    </types> 
     <version>60.0</version>
 </Package>
