--- a/.github/workflows/Validate_PR.yml
+++ b/.github/workflows/Validate_PR.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           SFDX_AUTH_URL: ${{ secrets.SFDX_AUTH_URL }}
           DRY_RUN: true
-          TEST_LEVEL: Default
+          TEST_LEVEL: NoTestRun
