--- a/.github/workflows/Deploy_V2VDemo1.yml
+++ b/.github/workflows/Deploy_V2VDemo1.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           SFDX_AUTH_URL`: ${{ secrets.SFDX_AUTH_URL }}
           DRY_RUN: false
+          TEST_LEVEL: NoTestRun
 
   close_job:
     # this job will only run if the PR has been closed without being merged
