--- a/.github/workflows/Deploy_V2VDemo1.yml
+++ b/.github/workflows/Deploy_V2VDemo1.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Deploy on V2VDemo1
         uses: jawills/sf-deploy@v1.0
         with:
-          SFDX_AUTH_URL`: ${{ secrets.SFDX_AUTH_URL }}
+          SFDX_AUTH_URL: ${{ secrets.SFDX_AUTH_URL }}
           DRY_RUN: false
           TEST_LEVEL: NoTestRun
 
